Saving data between assignment sections

--- a/Segmenting and Clustering Toronto.ipynb
+++ b/Segmenting and Clustering Toronto.ipynb
@@ -2031,17 +2031,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Use .shape method to print the number of rows in your dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2050,7 +2048,7 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,11 +2058,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save csv file from first section to use at start of second section"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('toronto_df_1.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
